# LLM_application_development

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Dockerfile  pyproject.toml
backend/src/: document_manager.py  document_processor.py  document_query.py  main.py  state_manager.py
backend/uploads/: quick_sort.txt  trie.txt
frontend/: Dockerfile  pyproject.toml
frontend/src/: app.py
