[tool.poetry]
name = "rag-application-backend"
version = "0.1.0"
description = "Backend for the RAG application"
authors = ["Kyle Wu"]

[tool.poetry.dependencies]
python = "^3.11"
aioboto3 = "^12"
fsspec = "*"
openai = "^1.14"
pandas = "^2"
poetry = "^1.7"
pydantic = "^2"
s3fs = "*"
tiktoken = "^0.7.0"
langchain-community = "^0.2.15"
langchain = "^0.2.15"
langchain_core = "^0.2.15"
langchain-openai = "^0.1.23"
pydub = "^0.25.1"
scipy = "^1.14.1"
langchain-chroma = "^0.1.4"
pypdf = "^4.3.1"
Markdown = "^3.7"
protobuf = "3.20.0"
chromadb = "^0.5.11"

[tool.poetry.group.dev.dependencies]
cfn_flip = "*"
cfn-lint = "*"
ipykernel = "*"
openpyxl = "*"
beautifulsoup4 = "*"
pyarrow = "*"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"