[tool.poetry]
name = "rag-application-frontend"
version = "0.1.0"
description = "Frontend for the RAG application"
authors = ["Kyle Wu"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.12.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"